# github-release-downloader

./: Cargo.toml  LICENSE  README.md  github-release-downloader
.github/workflows/: release.yaml
src/: github_response_error.rs  main.rs  release_asset_downloader.rs  release_inspector.rs  reqwest_builder.rs  responses.rs
