[package]
name = "github-release-downloader"
version = "0.1.0"
edition = "2024"
description = "A tool to download GitHub release assets"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
